<resources>
    <string name="app_name">Lab2Counter</string>
    <string name="app_logo">App logo</string>
    <string name="initial_value">0</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="reset">Reset</string>
    <string name="step">Step</string>
    <string name="step_initial">Step: 1</string>
    <string name="step_value">Step: %d</string>
</resources>
